--- a/docs/1.3_sound.md
+++ b/docs/1.3_sound.md
@@ -1,26 +1,27 @@
-# Playing sounds
- The goal of this lab is to amaze yourself that you can do some audio file processing with Python. You won't get all the details, but you can cut-and-paste for this lab to start conversing in Python.  As a secondary goal, you'll get used to installing Python packages and commandline tools.
+# 播放声音
 
-First, download the following two audio files so we have some raw materials to work with.
+本实验的目标是让您感到惊讶，您可以使用 Python 处理一些音频文件。您将无法获得所有详细信息，但您可以剪切并粘贴此实验来启动 Python 会话。作为次要目标，您将习惯于安装 Python 包和命令行工具。
 
-* [initial sequence from Kiss by Prince, Kiss.aiff](../notes/sound/Kiss.aiff)
-* [ahhh sound, ahhh.mp3](../notes/sound/ahhh.mp3)
+首先，下载以下两个音频文件，以便我们拥有一些要处理的原材料。
 
-I suggests that you store them in a directory such as:
+* [来自 Kiss by Prince的初始序列，`Kiss.aiff`](../notes/sound/Kiss.aiff)
+* [ahhh 声音，`ahhh.mp3`](../notes/sound/ahhh.mp3)
+
+我建议你将它们存储在如下目录中：
 
 `/Users/YOURID/msan501/labs/sound`
 
-where `YOURID` is your computer login name. For example, my login name is `parrt`. On Linux it would something like:
+其中`YOURID`是您的计算机登录名。 例如，我的登录名是`parrt`。在 Linux 上它会像：
 
 `/home/YOURID/msan501/labs/sound`
 
-## Installing commandline tools
+## 安装命令行工具
 
-It turns out that the sound libraries we're going to use in Python don't know how to process mp3 files. We need to convert the ahhh.mp3 file to ahhh.wav, which the libraries do know how to process. To do that, were going to use a tool called [mpg123](https://www.mpg123.de/).
+事实证明，我们将在 Python 中使用的声音库，不知道如何处理 mp3 文件。 我们需要将`ahhh.mp3`文件转换为`ahhh.wav`，这些库知道如何处理它。 为此，我们将使用名为 [mpg123](https://www.mpg123.de/) 的工具。
 
-To install most free software on the Mac, we use use a program called [homebrew](https://brew.sh/) (just `brew` from the command line). It might be preinstalled on your computer, but if not, read the instructions and install it. It's a matter of cutting and pasting a single line that starts with `/usr/bin/ruby...`
+要在 Mac 上安装大多数免费软件，我们使用一个名为 [homebrew](https://brew.sh/)（家酿啤酒）的程序（从命令行访问只是`brew`）。它可能已预先安装在您的计算机上，但如果没有，请阅读说明并进行安装。这是一个切割和粘贴以`/usr/bin/ruby...`开头的单行的问题
 
-Once that's installed, we can use it to install `mpg123`. From the terminal, run the following `brew` command, which should give the indicated output:
+一旦安装完毕，我们就可以用它来安装`mpg123`。 从终端运行以下`brew`命令，该命令应该给出指示的输出：
 
 ```bash
 $ brew install mpg123
@@ -29,24 +30,24 @@ $ brew install mpg123
 ######################################################################## 100.0%
 ==> Pouring mpg123-1.25.0.el_capitan.bottle.tar.gz
 ==> Using the sandbox
-🍺  /usr/local/Cellar/mpg123/1.25.0: 26 files, 765.2KB
+  /usr/local/Cellar/mpg123/1.25.0: 26 files, 765.2KB
 ```
 
-On Linux, installation of mpg123 is either:
+在 Linux 上，mpg123 的安装是：
 
 ```bash
 sudo apt-get install mpg123
 ```
 
-or
+或者：
 
 ```bash
 $ sudo yum install mpg123
 ```
 
-## Converting mp3 to wav files
+## 将`mp3`转换为`wav`文件
 
-Now, that we have mpg123 installed, we can use it to convert an .mp3 to a .wav file. Go into the directory where you have saved the `ahhh.mp3` file using the `cd` (change directory) command and list at the files with `ls`:
+现在，我们安装了 mpg123，我们可以使用它将`.mp3`转换为`.wav`文件。 使用`cd`（更改目录）命令进入保存`ahhh.mp3`文件的目录，并使用`ls`列出文件：
 
 ```bash
 $ cd /Users/YOURID/msan501/labs/sound
@@ -54,7 +55,7 @@ $ ls
 Kiss.aiff  ahhh.mp3
 ```
 
-Use following command to convert the file:
+使用以下命令转换文件：
 
 ```bash
 $ mpg123 -w ahhh.wav ahhh.mp3 
@@ -74,26 +75,26 @@ Comment:  00000000 00000210 000009F5 000000000004FF7B 00000000 0002AB44 00000000
 [0:07] Decoding of ahhh.mp3 finished.
 ```
 
-There's a lot of gibberish in that output that we don't care about but make sure that it says "finished" and it doesn't look like there are any errors. Take a look at the files in the current directory and see if ahhh.wav appears:
+在那个输出中有很多乱码，我们并不关心，但要确保它表示“完成”，并且看起来没有任何错误。 看一下当前目录中的文件，看看是否出现了`ahhh.wav`：
 
 ```bash
 $ ls
 Kiss.aiff  ahhh.mp3   ahhh.wav 
 ```
 
-If you can't figure out how to convert to `ahhh.wav`, don't worry about it. You can just [download it from my notes](../notes/sound/ahhh.wav).
+如果您无法弄清楚如何转换为`ahhh.wav`，请不要担心。 你可以[从我的笔记下载它](../ notes / sound / ahhh.wav)。
 
-At this point, we've learned to jump around to different locations in the file system using `cd` and used `ls` to list the files in a directory. We use `brew` as our install command for non-Python packages.
+此时，我们已经学会了使用`cd`跳转到文件系统中的不同位置，并使用`ls`列出目录中的文件。 我们使用`brew`作为非 Python 包的`install`命令。
 
-## Installing Python packages
+## 安装 Python 包
 
-In order to read and play sound files from Python, we need to leverage some existing Python code. Code is typically delivered in bundles called *libraries* or *packages*; the terms are more or less used synonymously in practice.
+为了从 Python 读取和播放声音文件，我们需要利用一些现有的 Python 代码。 代码通常以包含*库*或*包*的形式提供；这些术语或多或少在实践中同义使用。
 
-* For reading sound files, we need [pysoundfile](http://pysoundfile.readthedocs.io/en/0.9.0/)
-* For playing sounds, we need [sounddevice](http://python-sounddevice.readthedocs.io/en/0.3.7/)
+* 对于读取声音文件，我们需要 [pysoundfile](http://pysoundfile.readthedocs.io/en/0.9.0/。
+* 对于播放声音文件，我们需要 [sounddevice](http://python-sounddevice.readthedocs.io/en/0.3.7/。
 
-If we try to use packages before installing them, the Python executor shows us errors like the following.
- 
+如果我们在安装包之前尝试使用包，那么 Python 执行器会向我们显示如下错误。
+
 ```bash
 ---------------------------------------------------------------------------
 ImportError                               Traceback (most recent call last)
@@ -103,9 +104,9 @@ ImportError                               Traceback (most recent call last)
 ImportError: No module named soundfile
 ```
 
-The key is that at the `import` statement, we get the error `No module named soundfile`.  That shouldn't wreck your day--it just means we have to install that package.
+关键是在`import`语句中，我们得到错误`No module named soundfile`。这不应该搞砸你的一天 - 这只是意味着我们必须安装该软件包。
 
-To install Python packages, we use the `pip` (or, later, `conda`) program. Normally this program does what we want quickly and easily, but a number of things can go wrong. The most common is that your `pip` program does not match up with the `python` program. First verify that they appear to be coming from the same `bin` directory using `which`:
+要安装 Python 包，我们使用`pip`（或稍后，`conda`）程序。通常这个程序可以快速轻松地完成我们想要的操作，但是很多事情都可能出错。最常见的是你的`pip`程序与`python`程序不匹配。首先使用`which`验证它们是否来自同一个`bin`目录：
 
 ```bash
 $ which pip
@@ -116,22 +117,22 @@ $ which python3
 /Users/parrt/anaconda3/bin/python3
 ```
 
-Now, let's install the `pysoundfile` package:
+现在，让我们安装`pysoundfile`包：
 
 ```bash
 $ pip install pysoundfile
 Collecting pysoundfile
   Downloading PySoundFile-0.9.0.post1-py2.py3.cp26.cp27.cp32.cp33.cp34.cp35.cp36.pp27.pp32.pp33-none-macosx_10_5_x86_64.macosx_10_6_intel.macosx_10_9_intel.macosx_10_9_x86_64.whl (573kB)
-    100% |████████████████████████████████| 573kB 1.4MB/s 
+    100% | | 573kB 1.4MB/s 
 Requirement already satisfied: cffi>=0.6 in /Users/parrt/anaconda2/lib/python2.7/site-packages (from pysoundfile)
 Requirement already satisfied: pycparser in /Users/parrt/anaconda2/lib/python2.7/site-packages (from cffi>=0.6->pysoundfile)
 Installing collected packages: pysoundfile
 Successfully installed pysoundfile-0.9.0.post1
 ```
 
-**LINUX USERS:** You need to do `conda install libgcc` as well to make this sound stuff work.
+**LINUX用户：**你需要执行`conda install libgcc`来使这个声音组件生效。
 
-Install the other package as well:
+同样安装其他包：
 
 ```bash
 $ pip install sounddevice
@@ -139,7 +140,7 @@ Collecting sounddevice
 ...
 ```
 
-To make sure that we have installed the packages properly, we can try importing them with the interactive Python shell `python` or `ipython`:
+为了确保我们已正确安装软件包，我们可以尝试使用交互式 Python shell `python`或`ipython`导入它们：
 
 ```bash
 $ python
@@ -150,13 +151,13 @@ Type "help", "copyright", "credits" or "license" for more information.
 >>> import sounddevice as sd
 ```
 
-This time, we do not get an error at the `import` statement.
+这一次，我们的`import`语句没有出错。
 
-## Playing sounds with Python
+## 用 Python 播放声音
 
-At this point, you have converted a file so it can be used by our Python libraries and you have installed those Python libraries. In doing so, you used a number of commandline tools you should get very familiar with: `brew`, `pip`, `which`, `cd`, `ls`, `python`, etc...
+此时，您已经转换了一个文件，以便我们的 Python 库可以使用它，并且您已经安装了这些 Python 库。 在这样做时，你使用了一些你应该非常熟悉的命令行工具：`brew`，`pip`，`which`，`cd`，`ls`，`python`等等...
 
-It's time to put all of this together into a simple Python program that you can cut-and-paste to play a sound. Let's start with code to play the `Kiss.aiff` file.  Create a file called `play.py` in the same directory where your audio files are. You can use `nano` or another text editor. Here is the code:
+现在是时候把所有这些放在一个简单的 Python 程序中，你可以剪切和粘贴来播放声音。 让我们从代码开始播放`Kiss.aiff`文件。 在音频文件的同一目录中创建一个名为`play.py`的文件。 您可以使用`nano`或其他文本编辑器。 这是代码：
 
 ```python
 import soundfile as sf    # Use this package
@@ -167,13 +168,13 @@ sd.play(kiss, samplerate)                # start playing the music
 sd.wait()                                # wait until music finishes before exiting
 ```
 
-Run this program from the command line using:
+使用以下命令从命令行运行此程序：
 
 ```bash
 $ python play.py
 ```
 
-Edit the program now and change the `'Kiss.aiff'` string to `'ahhh.wav'`:
+现在编辑程序并将`'Kiss.aiff'`字符串更改为`'ahhh.wav'`：
 
 ```python
 ...
@@ -181,13 +182,13 @@ kiss, samplerate = sf.read('ahhh.wav')
 ...
 ```
 
-Execute the program again and you should hear the other sound file play.
+再次执行程序，您应该听到播放其他声音文件。
 
-The most common error is not having the sound files in the same directory as the code.
+最常见的错误是声音文件没有与代码位于同一目录中。
 
-## Generating our own sounds
+## 生成我们自己的声音
 
-In the [sound lecture](../notes/sound.ipynb), we saw how to generate sine waves and that a sine wave gives a pure tone when we squirt it out to the speaker. Create a `puretone.py` file and put the following code in there.
+在[声音章节](../notes/sound.ipynb)中，我们看到了如何产生正弦波，当我们将它扔给扬声器时，正弦波会产生纯音。 创建一个`puretone.py`文件并在其中放入以下代码。
 
 ```python
 import numpy
@@ -201,13 +202,13 @@ sd.play(y, fs)
 sd.wait()
 ```
 
-Run it from the command line. You should know how to run this new program by abstracting from the other program executions, but it is:
+从命令行运行它。通过归纳其他程序的执行，您应该知道如何运行这个新程序，它是：
 
 ```bash
 $ python puretone.py
 ```
 
-Change the `440` to something higher like `1000`:
+将`440`更改为更高的值，如`1000`：
 
 ```python
 ...
@@ -215,9 +216,9 @@ y = numpy.sin(2*numpy.pi*1000*t)                    # pure sine wave at 1000 Hz
 ...
 ```
 
-When you run it again, you should hear a higher tone.
+再次运行时，您应该听到更高的音调。
 
-As we did in the lecture, let's add two tones together to make a cooler sound. Make the sine wave code look like the following, with two sinewave constructions:
+正如我们在演讲中所做的那样，让我们一起添加两个音调来产生更酷的声音。 带有两个正弦波结构的正弦波代码如下所示：
 
 ```python
 ...
@@ -226,7 +227,7 @@ y2 = numpy.sin(2*numpy.pi*1000*t)                   # pure sine wave at 1000 Hz
 ...
 ```
 
-The signals are in `y` and `y2` variables. Now, alter the statement that plays the sound to add the signals together before playing:
+信号在'y`和`y2`变量中。 现在，改变播放声音的语句，以便在播放之前将信号添加到一起：
 
 ```python
 ...
@@ -234,9 +235,9 @@ sd.play(y+y2, fs)
 ...
 ```
 
-Save the program and run it. You should hear the two sounds played together as one sound.
+保存程序并运行它。 您应该听到两个声音一起播放为一个声音。
 
-Now, let's see what that signal looks like visually. Create a file called `twotonesplot.py` and enter the following code:
+现在，让我们看看这个信号在视觉上是什么样的。 创建一个名为`twotonesplot.py`的文件并输入以下代码：
 
 ```python
 import numpy
@@ -252,15 +253,15 @@ plt.scatter(t[0:1000],(y+y2)[0:1000],s=1)
 plt.show()
 ```
 
-See if you can see the relationship between this code and the previous code. We have another import statement that pulls in some plotting code and we use that to produce a scatterplot by replacing the `play`/`wait` sequence with with the last two lines. Other than that the code is the same. Run that code and you should see a nice wiggly sinewave, which is the addition of two pure sine waves at different frequencies:
+看看您是否可以看到此代码与之前代码之间的关系。 我们有另一个`import`语句，它引入了一些绘图代码，我们用它来生成一个散点图，用最后两行替换`play`/`wait`序列。 除此之外，代码是相同的。 运行该代码，你应该看到一个漂亮的摇摆正弦波，这是两个不同频率的纯正弦波：
 
 <img src="img/twotone.png" width="100%">
 
-## Sound processing
+## 声音处理
 
-### Reducing the volume
+### 减小音量
 
-To convince you that soundwaves are just numbers, let's make the numbers loaded from an audio file smaller. What should happen to the resulting sound when we play it? Yep, it should get quieter. Here is a version of the `play.py` program called `softer.py` that has an extra line to decimate the amplitude:
+为了让你相信声波只是数字，让我们从音频文件加载的数字更小。当我们演奏它时会产生什么声音？是的，它应该变得更安静。这是一个名为`softer.py`的`play.py`程序的版本，它有一个额外的行来减少振幅：
 
 ```python
 import soundfile as sf    # Use this package
@@ -272,35 +273,33 @@ sd.play(kiss, samplerate)                # start playing the music
 sd.wait()                                # wait until music finishes before exiting
 ```
 
-This line divides each value in the digitized signal by 10:
+该行将数字信号中的每个值除以 10：
 
 ```python
 kiss = kiss * .1                         # Reduce amplitude to make quieter
 ```
 
-It turns out that our ears hear things half as loudly when we drop the signal strength by 10. (The term *decibel* should ring a bell. Haha; pun intended. Decimate means divide by 10.)
+事实证明，当我们将信号强度除以 10 时，我们的耳朵听到的声音减小一半。（术语*分贝（decibel）*应该是个双关语，`Decimate`意味着除以 10。）
 
-### Slowing the audio down (and changing the pitch)
+### 减慢音频（并改变音高）
 
-Let's say that we'd like to deepen the voice of Prince. All we have to do is slow the music down. To do that, all we have to do is monkey with the sample rate. Make a copy of the `play.py` file into `slower.py` and change the `play` line to be:
+让我们说我们想加深 Prince 的声音。 我们所要做的就是减慢音乐速度。 要做到这一点，我们所要做的就是玩一玩采样率。 将`play.py`文件复制到`slow.py`并将`play`行更改为：
 
 ```python
 sd.play(kiss, samplerate*.8)             # play the music at 80% speed
 ```
 
-Now run `slower.py` and Prince's voice will sound freaky and deep near at the end. The whole thing sounds slow down.  Intuitively, reducing the sample rate on playback slows things down because the player consumes fewer samples per second. This stretches the sound to be longer, just like slowing down a record turntable with your finger.
+现在运行`slow.py`并且 Prince 的声音在最后听起来很怪异。 整个东西听起来很慢。 直观地说，降低播放时的采样率会降低速度，因为播放器每秒消耗更少的样本。 这会使声音延长，就像用手指放慢唱片转盘一样。
+
+可以减慢音乐速度并且**不**更改音高，这在尝试将音乐从音频转换为乐谱时非常有用。构建[我所使用的转录软件](https://www.seventhstring.com/xscribe/overview.html)的人，很好的描述了[不改变音高并减慢音乐](https://www.seventhstring.com/resources/slowdown.html)所涉及的技巧。
 
 
-It is possible to slow music down and <b>not</b> change the pitch, which is really useful when trying to transcribe music from audio to sheet music.  The guy who builds the <a href="https://www.seventhstring.com/xscribe/overview.html">Transcribe! software I use</a> has a good description of the kung fu involved to <a href="https://www.seventhstring.com/resources/slowdown.html">Slow Down Music Without Changing the Pitch</a>.
+## 答案
 
-</table>
+您可以在[ msan501 类库](https://github.com/parrt/msan501/tree/master/labs/code/sound)中找到本实验的所有代码。 这是[声音文件](https://github.com/parrt/msan501/tree/master/notes/sound)。
 
-## Solution
+## 总结
 
-You can find all of the code for this lab in the [msan501 class repository](https://github.com/parrt/msan501/tree/master/labs/code/sound). Here are the [sound files](https://github.com/parrt/msan501/tree/master/notes/sound).
+声音处理是一个非常有趣的迷人话题，你刚刚在这里做了一些尝试。我希望这个实验可以激励您深入了解编程的细节，以便您可以学习为自己构建这些类型的程序。 在第一个项目中，您将了解图像处理，您猜对了，一切都是数字。
 
-## Summary
-
-Sound processing is a really fun fascinating topic, and you've just gotten a taste here. My hope is that this lab motivates you to dive into the details of programming so that you can learn to build these kinds of programs for yourself. In the first project, you'll learn about image processing where, you guessed it, everything is a number as well.
-
-You've also seen how to use the commandline to install other commandline programs and Python packages. This is something you will use again and again as you write more and more sophisticated programs.
+您还了解了如何使用命令行安装其他命令行程序和 Python 包。 当您编写越来越复杂的程序时，这将是您将一次又一次地使用的东西。
