--- a/docs/2.6_functions.md
+++ b/docs/2.6_functions.md
@@ -169,8 +169,7 @@ def funcname(argname1, argname2):
 
 ## 求和函数
 
-In [Model of Computation](computation.ipynb), we saw code to translate mathematical Sigma notation to python and so this code to sum the values in a list should be pretty familiar to you:
-
+在[计算模型](computation.ipynb)中，我们看到了将数学 Sigma 表示法转换为 python 的代码，因此用于汇总列表中的值的这段代码，应该是非常熟悉的：
 
 ```python
 Quantity = [6, 49, 27, 30, 19, 21, 12, 22, 21]
@@ -182,22 +181,15 @@ sum
 # 207
 ```
 
+此操作是累积，并且存在相关的代码模板，您应该记住它。每当有人说累积，你应该考虑结果的初始化和更新部分结果的循环。
 
-
-
-
-
-
-This operation is accumulator and there is an associated code template, which you should memorize. Any time somebody says accumulator, you should think loop around a partial result update preceded by initialization of that result.
-
-Summing values is very common so let's encapsulate the functionality in a function to avoid  having to cut-and-paste the code template all the time. Our black box with a few sample "input-output" pairs from a function plan looks like:
+对值求和非常常见，因此我们将功能封装在一个函数中，来避免必须始终剪切和粘贴代码模板。我们的黑盒子与函数规划中的一些示例“输入-输出”对如下：
 
 <img src="img/sum-func.png" width="180">
 
-(Laying out the examples like that made us realize that we need to worry about empty lists.)
+（列出这样的例子让我们意识到我们需要担心空列表。）
 
-We group the summing functionality into a function by indenting it and then adding a function header:
-
+我们通过缩进它然后添加一个函数头来将求和功能分组到一个函数中：
 
 ```python
 def sum(data):
@@ -213,13 +205,7 @@ sum(data=Quantity) # implicit assignment here
 # 207
 ```
 
-
-
-
-
-
-
-The key benefit of this function version is that now we have some generic code that we can invoke with a simple call to `sum`. The argument to the function is the list of data to sum and so the for loop refers to it than the specific `Quantity` variable. (Notice that the variable inside the function is now `s` not `sum` to avoid confusion with the function name.) 
+这个函数版本的主要好处是，现在我们有一些通用代码，我们可以通过简单调用`sum`来调用它们。函数的参数是要求和的数据列表，因此`for`循环引用它而不是特定的`Quantity`变量。（请注意，函数内部的变量现在是`s`而不是`sum`，来避免与函数名混淆。）
 
 
 ```python
@@ -228,13 +214,7 @@ sum([1,2,3])
 # 6
 ```
 
-
-
-
-
-
-
-You might be tempted to build a function that directly references the `Quantity` global list instead of a parameter:
+您可能想要构建一个直接引用`Quantity`全局列表而不是参数的函数：
 
 ```python
 # OMG, this is so horrible I find it difficult to type!
@@ -245,10 +225,9 @@ def sum():
     return s
 ```
 
-The problem is this function now only works with one list and is in no way generically useful. This defeats the purpose of creating the function because it's not reusable.
- 
-Since the real function accepts a list parameter, we can pass another list to the function:
+问题是这个函数现在只适用于一个列表，并且绝不是通用的。这违背了创建函数的目的，因为它不可重用。
 
+由于真正的函数接受列表参数，我们可以将另一个列表传递给函数：
 
 ```python
 ages = [10, 21, 13]
@@ -263,9 +242,7 @@ print(sum([ ])) # Empty list
 '''
 ```
 
-
-Another thing to learn is that Python allows us to name the arguments as we passed them to a function:
-
+要学习的另一件事是，Python 允许我们在将参数传递给函数时命名参数：
 
 ```python
 sum(data=ages)
@@ -273,14 +250,7 @@ sum(data=ages)
 # 44
 ```
 
-
-
-
-
-
-
-The function call, or invocation, `sum(Quantity)` passes the data to the function. The function returns a value and so the function call is considered to evaluate to a value, which we can print out as shown above. Like any value, we can assign the result of calling a function to a variable:
-
+函数调用`sum(Quantity)`将数据传递给函数。该函数返回一个值，因此函数调用被认为是一个值，我们可以打印出来，如上所示。像任何值一样，我们可以将调用函数的结果赋给变量：
 
 ```python
 x = sum(Quantity)  # call sum and save result in x
@@ -289,13 +259,7 @@ x
 # 207
 ```
 
-
-
-
-
-
-
-Please remember that returning a value from a function is not the same thing as printing, which is a side-effect. Only the `print` statement prints a value to the console when running a program. *Don't confuse executing a program with the interactive Python console (or this notebook), which automatically prints out the value of each expression we type.* For example:
+请记住，从函数返回值与打印不同，这是一种副作用。运行程序时，只有`print`语句将值输出到控制台。*不要混淆执行程序与交互式 Python 控制台（或此笔记本），它会自动打印出我们键入的每个表达式的值。*例如：
 
 ```python
 >>> 34
@@ -305,21 +269,19 @@ Please remember that returning a value from a function is not the same thing as 
 >>> 
 ```
 
-The `sum` function has one parameter but it's also common to have functions with two parameters.
+`sum`函数有一个参数，但具有两个参数的函数也很常见。
 
-### Exercise
+### 练习
 
-Write a function called `neg` that takes one number parameter `x` and returns the negative of `x`.
-
+编写一个名为`neg`的函数，它接受一个数字参数`x`并返回`x`的相反数。
 
 ```python
 def neg(x): return -x
 ```
 
-### Exercise
+### 练习
 
-Write a function called `add` the takes 2 number parameters, `x` and `y`, and returns the addition of the two parameters.
-
+编写一个名为`max`的函数，接受 2 个数字参数，`x`和`y`，并返回两个参数的最大值。
 
 ```python
 def max(x,y): return x if x>y else y
@@ -338,9 +300,7 @@ print(max(99,10))
 '''
 ```
 
-
-Notice that once we use the argument names, the order does not matter:
-
+请注意，一旦我们使用参数名称，顺序无关紧要：
 
 ```python
 print(max(x=10, y=99))
@@ -352,10 +312,9 @@ print(max(y=99, x=10))
 '''
 ```
 
-### Exercise
+### 练习
 
-Write a function called `area` that takes a radius `r` parameter and returns the area of a circle with that radius (&pi;`r`<sup>2</sup>). Hint: Recall that the `math` package has a variable called `pi`.
-
+编写一个名为`area`的函数，它接受参数半径`r`，并返回具有该半径的圆的面积（`pi * r ** 2`）。 提示：回想一下`math`包有一个名为`pi`的变量。
 
 ```python
 import math
@@ -368,10 +327,9 @@ area(1), area(r=2)
 ```
 
 
-### Exercise
+### 练习
 
-Write a Python function called `words` that accepts a string, `doc`, containing a sequence of words separated by a single space character and returns a list of words in lowercase. An argument of `'X Y z'` should return a list with value `['x', 'y', 'z']`. Hint: `'HI'.lower()` evaluates to `'hi'`.
-
+编写一个名为`words`的 Python 函数，它接受一个字符串`doc`，包含一个由单个空格字符分隔的单词序列，并返回一个小写单词列表。`X Y z`的参数应该返回一个值为`['x', 'y', 'z']`的列表。 提示：`'HI'.lower()`求值为'hi'。
 
 ```python
 def words(doc:str) -> list:
@@ -393,16 +351,9 @@ words('Terence Parr is the instructor of MSAN501')
 # ['terence', 'parr', 'is', 'the', 'instructor', 'of', 'msan501']
 ```
 
+## 搜索函数
 
-
-
-
-
-
-## Search function
-
-We've seen code to search for a list element, but the specific element and specific list were *hardcoded*.  That is to say, the code only worked with specific values and was not generic:
-
+我们已经看到了搜索列表元素的代码，但是特定元素和特定列表是*硬编码*。也就是说，代码只能使用特定的值，而不是通用的：
 
 ```python
 first=['Xue', 'Mary', 'Robert']     # our given input
@@ -417,14 +368,7 @@ index
 # 1
 ```
 
-
-
-
-
-
-
-It would be nice to have a function we can call because searching is so common. To get started, we can just wrap the logic associated with searching in a function by indenting and adding a function header. But, we should also change the name of the list so that it is more generic and make it a parameter (same with the search target).
-
+有一个我们可以调用的函数会很好，因为搜索是如此常见。首先，我们可以通过缩进和添加函数头来包装函数搜索相关的逻辑。 但是，我们还应该更改列表的名称，使其更通用，并使其成为参数（与搜索目标相同）。
 
 ```python
 def search(x, data):
@@ -437,13 +381,11 @@ def search(x, data):
 
 first=['Xue', 'Mary', 'Robert']
 search('Mary', first) # invoke search with 2 parameters
+
+# 1
 ```
 
-    1
-    
-
-We are now passing two arguments to the function: `x` is the element to find and `data` is the list to search. Anytime we want, we can search a list for an element just by calling `search`:
-
+我们现在向函数传递两个参数：`x`是要查找的元素，`data`是要搜索的列表。 只要我们想要，我们就可以通过调用`search`来搜索元素列表：
 
 ```python
 search('Xue', first), search('Robert', first)
@@ -456,15 +398,12 @@ search('Xue', first), search('Robert', first)
 '''
 ```
 
-
-
 ```python
 # It is a good idea to test the failure case
 search('Jim', first)
 
 # -1
 ```
-
 
 It turns out we can simplify that function by replacing the `break` statement with a `return` statement. Whereas a break statement breaks out of the immediately enclosing loop, the return statement returns from the function no matter where it appears in the function. In the current version, if we find the element, the `break` statement breaks out of the loop and forces the processor to execute the statement following the loop, which is the `return` statement. Because the return statement takes an expression argument, we don't need to track the index in a separate variable. *The `return` statement forces the processor to immediately exit the function and return the specified value.* In effect, then the `return` breaks out of the loop first then the function.
 
