--- a/docs/2.6_functions.md
+++ b/docs/2.6_functions.md
@@ -405,10 +405,9 @@ search('Jim', first)
 # -1
 ```
 
-It turns out we can simplify that function by replacing the `break` statement with a `return` statement. Whereas a break statement breaks out of the immediately enclosing loop, the return statement returns from the function no matter where it appears in the function. In the current version, if we find the element, the `break` statement breaks out of the loop and forces the processor to execute the statement following the loop, which is the `return` statement. Because the return statement takes an expression argument, we don't need to track the index in a separate variable. *The `return` statement forces the processor to immediately exit the function and return the specified value.* In effect, then the `return` breaks out of the loop first then the function.
+事实证明，我们可以通过用`return`语句替换`break`语句来简化该函数。 虽然`break`语句突破了闭合的循环，但无论函数出现在何处，`return`语句都会从函数返回。 在当前版本中，如果我们找到该元素，`break`语句就会突破循环并强制处理器执行循环后的语句，即`return`语句。因为`return`语句接受表达式参数，所以我们不需要在单独的变量中跟踪索引。*`return`语句强制处理器立即退出函数并返回指定的值。*实际上，`return`首先突破循环，然后是函数。
 
-Here is the way the cool kids would write that function:
-
+这是大牛写这个函数的方式：
 
 ```python
 def search(x, data):
@@ -429,10 +428,9 @@ print(search('foo', first))
 ```
 
 
-## Visibility of symbols
+## 符号的可见性
 
-Variables created outside of a function are so-called *global variables* because they live in the global space (or frame). For example, let's revisit the non-function version of the sum accumulator where I have added a call to lolviz library to display three global variables inside the loop:
-
+在函数外部创建的变量是所谓的*全局变量*，因为它们存在于全局空间（或帧）中。例如，让我们重新访问`sum`累加器的非函数版本，其中我添加了`lolviz`库的调用，来在循环内显示三个全局变量：
 
 ```python
 from lolviz import *
@@ -455,22 +453,13 @@ sum
 
 ![svg](img/2.6_functions_55_1.svg)
 
+这里有三个（全局）变量：`Quantity`，`sum`和`q`。该程序使用所有这些来计算结果。
 
-
-
-
-
-
-
-There are three (global) variables here: `Quantity`, `sum`, and `q`. The program uses all of those to compute the result.
-
-Let's see what the "call stack" looks like using the function version of the accumulator.
-
+让我们看看使用累加器的函数版本的“调用栈”是什么样的。
 
 ```python
 reset -f
 ```
-
 
 ```python
 from lolviz import *
@@ -488,24 +477,11 @@ sum(Quantity)
 # 207
 ```
 
-
 ![svg](img/2.6_functions_58_0.svg)
 
+如您所见，`sum`函数有一个新的*作用域*，因为主程序调用了一个函数。该函数有一个名为`data`的参数和一个名为`s`的局部变量（我称之为`callsviz`函数）。请注意，`Quantity`和`data`变量都指向相同的共享内存位置！ 只不过，名称在不同的上下文（作用域）中定义。这是我们在上一节中讨论过的数据别名。通过遍历`data`，`sum`函数实际上是遍历来自外部上下文的`Quantity`列表。
 
-
-
-
-
-
-
-
-```python
-
-```
-
-As you can see, there is a new *scope* for the `sum` function because the main program invoked a function. That function has a parameter called `data` and a local variable called `s` (from where I have called the `callsviz` function).  Notice that both `Quantity` and `data` variables point at the same shared memory location!! It's just that the names are defined in different contexts (scopes). This is the aliasing of data we talked about in the last section. By traversing `data`, the `sum` function is actually traversing the `Quantity` list from the outer context. 
-
-### Watch out for functions modifying data arguments
+### 注意修改数据参数的函数
 
 
 ```python
@@ -525,13 +501,10 @@ print(Quantity)
 # [99, 49, 27, 30, 19, 21, 12, 22, 21]
 ```
 
-
 ![svg](img/2.6_functions_62_0.svg)
 
 
-
-When the function returns, the frame for `sum` disappears, leaving only the global frame.
-
+当函数返回时，`sum`的帧消失，只留下全局帧。
 
 ```python
 def sum(data):
@@ -546,19 +519,11 @@ callsviz(varnames=['Quantity','data','s'])
 # 207
 ```
 
-
-
-
-
 ![svg](img/2.6_functions_64_1.svg)
-
-
-
 
 ```python
 reset -f
 ```
-
 
 ```python
 from lolviz import *
@@ -585,28 +550,21 @@ display(callsviz(varnames=['x','q','y','z']))
 ```
 
 
-
 ![svg](img/2.6_functions_66_1.svg)
-
-
 
 
 ![svg](img/2.6_functions_66_3.svg)
 
-
-
-
 ![svg](img/2.6_functions_66_5.svg)
 
+### 可见性规则
 
-### Visibility rules
+现在您已经考虑了上下文的概念，让我们根据上下文为变量的可见性建立一些规则：
 
-Now that you have the idea of context in mind, let's establish some rules for the visibility of variables according to context:
+* 主程序无法查看函数内的变量和参数；只是因为一个主程序可以调用一个函数，并不意味着它可以看到内部原理。 将函数视为带有参数和返回值的黑盒子。
+* 函数在技术上可以看到全局变量，但不作为一般规则。将每个函数所需的全局变量作为参数传递。
 
-* Main programs cannot see variables and arguments inside functions; just because a main program can call a function, doesn't mean it can see the inner workings. Think of functions as black boxes that take parameters and return values.
-* Functions can technically see global variables but don't do this as a general rule.  Pass the global variables that you need to each function as arguments.
-
-The latter rule is a good one because violating it generally means you're doing something "wrong". For example, if we tweak the `sum` accumulator function to refer directly to the global variable `Quantity`, we get:
+后一条规则很好，因为违反规则通常意味着你做的事情是“错误的”。 例如，如果我们调整`sum`累积函数，来直接引用全局变量`Quantity`，我们得到：
 
 ```python
 Quantity = [6, 49, 27, 30, 19, 21, 12, 22, 21]
@@ -617,10 +575,9 @@ def sum(data):         # parameter not used!
     return s
 ```
 
-The problem is that, now, `sum` only works on that global data. It's not generically useful. The clue is that the function ignores the `data` argument. So, technically the function can see global data, but it's not a good idea. (Violating this rule to alter a global variable is also a good way to get a subtle bug that's difficult to find.)
+问题是，现在，`sum`仅适用于该全局数据。它通常不是很有用。线索是该函数忽略了`data`参数。因此，从技术上讲，该函数可以查看全局数据，但这不是一个好主意。（违反此规则来更改全局变量，也是获取难以找到的细微错误的好方法。）
 
-### Technically we need to see global symbols (functions)
-
+### 从技术上讲，我们需要看到全局符号（函数）
 
 ```python
 def f():
@@ -634,17 +591,17 @@ f()
 # hi mom!
 ```
 
+## 返回值与打印
 
-## Return values versus printing
+仅仅把这个概念灌输给你......
 
-Just to pound this concept into your heads...
+学生最大的困惑之一是返回值和打印结果之间的差异。当我们将计划转换为 Python 代码时，我们会再次看到这一点，但重要的是要立即理解这些差异。
 
-One of the big confusion points for students is the difference between return values and printing results. We'll look at this again when we translate plans to Python code, but it's important to understand this difference right away. 
+分析世界中的程序，通常从文件读取数据并执行输出，或将数据写入另一个文件。 换句话说，程序与程序之外的世界交互。 程序之外的世界通常是网络，磁盘或屏幕。 相反，我们编写的大多数函数都不会与外部世界交互。
 
-Programs in the analytics world typically read data from a file and emit output or write data to another file. In other words, programs interact with the world outside of the program.  The world outside of the program is usually the network, the disk, or the screen.  In contrast, most functions that we write won't interact with the outside world.  
+<img src="img/redbang.png" width="30" align="left">
 
-<img src="img/redbang.png" width="30" align="left">Functions compute and return (give values back) to their caller. They don't print anything to the user unless explicitly asked to do so with a `print` statement.  
-
+函数计算并返回（返回值）给调用者。除非明确要求使用`print`语句，否则它们不会向用户打印任何内容。
 
 ```python
 def pi():
@@ -657,4 +614,3 @@ print(pi())
 None
 '''
 ```
-
